<resources>
    <string name="provision_back_description">Back</string>
    <string name="provision_start_content_description">Start</string>
    <string name="provision_next">Next</string>
    <string name="provision_skip_underline">Skip</string>
    <string name="provision_permission_settings_title">Permission settings</string>
    <string name="provision_terms_and_statement_title">Terms and conditions</string>
    <string name="provision_basic_settings_title">Basic settings</string>
    <string name="provision_agree_and_next">Agree</string>
    <string name="provision_agree_terms">I\'ve read and agree to the User Agreement and Privacy Policy.</string>
    <string name="provision_user_agreement">User Agreement</string>
    <string name="provision_privacy_policy">Privacy Policy</string>
    <string name="provision_terms_of_use">Terms and conditions</string>
    <string name="provision_terms_of_use_label_use_network_china">In order to provide you with better services, you must read and agree to our <a href="%1$s">User Agreement</a> and <a href="%2$s">Privacy Policy</a> before you can continue using the system. We shall protect your personal information in accordance with the relevant laws, regulations, and privacy policies.</string>
    <string name="provision_terms_of_label_period">.</string>
    <string name="provision_protect_persoanl_info_statement">We shall protect your personal information in accordance with the relevant laws, regulations, and privacy policies.</string>
    <string name="provision_service_agreement">I\'ve read and agreed to the terms and conditions.</string>
    <string name="provision_service_name_download">Downloads</string>
    <string name="provision_service_policy_download"><Data>Read and agree to the <a href="%1$s">Thunder Privacy Policy</a> and <a href="%2$s">Thunder Company Network Service Usage Agreement</a></Data></string>
    <string name="provision_congratulation_title">Setup complete</string>
    <string name="provision_congratulation_label">Experience the exciting HyperOS!</string>
    <string name="provision_complete_text">Enter the system</string>
    <string name="miuix_appcompat_action_mode_select_all">Select all</string>
    <string name="miuix_appcompat_cancel_description">Cancel</string>
    <string name="miuix_appcompat_confirm_description">OK</string>
    <string name="miuix_appcompat_select_all_description">Select all</string>
    <string name="miuix_appcompat_deselect_all_description">Deselect all</string>
    <string name="miuix_appcompat_delete_description">Delete</string>
    <string name="miuix_appcompat_search_action_mode_cancel">Cancel</string>
    <string name="miuix_appcompat_search_input_description">Search</string>
    <string name="miuix_appcompat_actionbar_immersion_button_more_description">More</string>
    <string name="miuix_appcompat_action_mode_inverse">Deselect all</string>
    <string name="tip">Tip</string>
    <string name="root">Some features aren\'t available without Root/Su permission</string>
    <string name="soft_reboot">Reboot </string>
    <string name="restart_app_desc">Are you sure you want to restart now %1$s?</string>
    <string name="hyperceiler_restart_quick">Quickly restart apps</string>
    <string name="hook_failed">The module isn\'t activated yet. Please check if LSPosed is enabled. If so, please restart or re-optimize the module.</string>
    <string name="kill_failed">Failed to end process. Please check if HyperCeiler has been granted Root/Su permissions.</string>
    <string name="start_failed">Failed to start activity. Please check if HyperCeiler has been granted Root/Su permissions.</string>
    <string name="pid_failed">The target app isn\'t running and doesn\'t need to be restarted.</string>
    <string name="reboot_failed">Reboot failed. Please check if HyperCeiler has been granted Root/Su permission.</string>
    <string name="experimental_features">Experimental features</string>
    <string name="experimental_reshook_new">Enable the new resource hook</string>
    <string name="experimental_reshook_new_desc">The new version of resource hooking delivers improved performance for resource injection. However, it may still present some issues and is intended for testing purposes only.\nNote: Enabling or disabling this feature requires a device restart to take effect.</string>
    <string name="error">Error</string>
    <string name="warn">Attention</string>
    <string name="module_app_failed">A fatal error occurred in the module</string>
    <string name="module_app_copy_desc">Press and hold the content to copy</string>
    <string name="module_title_1">Basic message</string>
    <string name="module_title_2">Stack message</string>
    <string name="app_error_desc">HyperCeiler was unexpectedly closed. To help us fix this, provide the information below:\n\nPress and hold any message to copy everything.</string>
    <string name="app_exit">OK</string>
    <string name="safe_mode_desc">%1$s has entered Safe mode due to multiple crashes, and HyperCeiler features has been temporarily disabled.</string>
    <string name="safe_mode_history">View exception records</string>
    <string name="safe_mode_cancel">Disable Safe mode</string>
    <string name="safe_mode_ok">Cancel</string>
    <string name="safe_mode_later_title">Tip</string>
    <string name="safe_mode_later_desc">%1$s is still in Safe mode and HyperCeiler features has been disabled. Disable Safe mode?</string>
    <string name="safe_mode_recorder_title">Exception records</string>
    <string name="safe_mode_recorder_file">File</string>
    <string name="safe_mode_recorder_class">Class</string>
    <string name="safe_mode_recorder_method">Method</string>
    <string name="safe_mode_recorder_line">Line</string>
    <string name="safe_mode_recorder_msg">Exception message</string>
    <string name="safe_mode_recorder_st">Stack trace</string>
    <string name="error_message">Exception message</string>
    <string name="error_type">Exception type</string>
    <string name="error_file_name">File name</string>
    <string name="error_time">Record time</string>
    <string name="error_version_name">Version name</string>
    <string name="error_git_hash">Git hash</string>
    <string name="error_build_time">Build time</string>
    <string name="copy_ok">Copied to clipboard</string>
    <string name="notification_channel_app_crash_name">The app is running abnormally</string>
    <string name="notification_title_message_emergency_crash">%s has crashed multiple times</string>
    <string name="notification_content_message">Click to view details</string>
    <string name="notification_view">View</string>
    <string name="tip_default">Tip: Here is the default tip. If you can see me, it means that there\'s a problem with HyperCeiler. Please report it to the developer in a timely and effective manner.</string>
    <string name="headtip_warn_not_offical_rom">The source of the ROM you\'re using may not be an official Xiaomi ROM, and some features may not work. Please contact your supplier for more details.</string>
    <string name="headtip_warn_unsupport_xposed">The Xposed framework you\'re currently using may cause some features to malfunction. If you experience these issues, try using a different version of the Xposed framework and check if the issue persists.</string>
    <string name="headtip_warn_unsupport_sysver">The current device is running on a system version that isn\'t (fully) adapted, which may result in anomalies in the HyperCeiler functionality.</string>
    <string name="headtip_warn_sign_verification_failed">The signature verification failed, and the current version you\'re using may not be from the official version of HyperCeiler, and may contain malicious code.</string>
    <string name="headtip_tip_auto_safe_mode">Safe mode can unhook some apps in time when they crash multiple times to ensure security. This feature requires the System Framework hook scope to run. We strongly recommend checking the System Framework scope to turn on Safe mode.</string>
    <string name="headtip_tip_long_press_to_copy">You can select text after long or double press, or copy it and send it back to the developer.</string>
    <string name="happy_birthday_hyperceiler">Today is HyperCeiler\'s birthday!\nThank you for your support over the past year, and let\'s continue to work together this year!</string>
    <string name="headtip_tip_fuck_coolapk">Today in history: Sevtinge delivered an important speech on July 14, 2022.</string>
    <string name="headtip_notice_dead_logger_errcode">The current device log service is abnormal and HyperCeiler features will be limited. Please restore the log service so that it can run normally.\nError code: %1$s</string>
    <string name="headtip_notice_dead_logger">The current device log service is abnormal and HyperCeiler features will be limited. Please restore the log service so that it can run normally.</string>
    <string name="unsupported_system_func">This feature isn\'t supported in the current system version</string>
    <string name="supported_system_func">This feature is officially supported in the current system version</string>
    <string name="feature_doing_func">The current feature is under development, stay tuned.</string>
    <string name="system_ui">System UI</string>
    <string name="mihome">System launcher</string>
    <string name="system_settings">Settings</string>
    <string name="security_center_hyperos">Security</string>
    <string name="demo" translatable="false">Demo</string>
    <string name="exit">Exit</string>
    <string name="ignore">Ignore</string>
    <string name="log_level">Log level</string>
    <string name="log_level_none">Disabled</string>
    <string name="disable_suggest">Disable suggest</string>
    <string name="enable_suggest">Enable suggest</string>
    <string name="logo_egg_NotificationName">Easter egg notification</string>
    <string name="logo_egg_NotificationName_tips">This is an Easter egg notification</string>
    <string name="logo_egg_Notification_tips">Please enable notifications in Settings to see the Easter eggs</string>
    <string name="logo_egg1">Wow, you actually found this place, that\'s amazing!</string>
    <string name="logo_egg2">Damn, will I be found even if I hide here…</string>
    <string name="logo_egg3">There are no Android eggs here, but there are HyperCeiler eggs!</string>
    <string name="uninstall_title">Uninstall HyperCeiler</string>
    <string name="uninstall_summary">After uninstalling HyperCeiler, the module configuration remains in the Xposed framework database. To remove it completely, first go to the module settings and reset the module configuration, then uninstall.</string>
    <string name="unsupported_func_tips">The current target scope source may not be official Xiaomi. For security reasons, all functions of this scope have been disabled. Please try switching to an app package released by official Xiaomi, or go to "Settings - Developer options - Debug mode" to specify the mounted version and try again.</string>
    <string name="debug_mode">Debug mode</string>
    <string name="open_debug_mode_tips">This option is only used to correctly handle the mounted version of the target app and should be used only when necessary.\nFor the app being debugged, functionality cannot be guaranteed. If you enable this, please **do not report** any issues that occur with that target app to the developer.</string>
    <string name="debug_mode_running">The current target scope is in debug mode. If not necessary, please go and turn it off.\nCurrent app version: %1$s\nSelected target version: %2$s\nSuccessfully hooked: %3$s</string>
    <string name="debug_mode_switch">Debug version</string>
    <string name="debug_mode_home_version">Set home version code</string>
    <string name="debug_mode_home_version_desc">A version number that is too high will still be blocked, so please fill it in carefully.</string>
</resources>