<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of HyperCeiler.
  ~
  ~ HyperCeiler is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~ Copyright (C) 2023-2025 HyperCeiler Contributions
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

    <SwitchPreference
        android:icon="@drawable/ic_default"
        android:key="prefs_key_system_ui_safe_mode_enable"
        android:layout="@layout/preference_header"
        android:summary="com.android.systemui"
        android:title="@string/system_ui" />

    <SwitchPreference
        android:icon="@drawable/ic_default"
        android:key="prefs_key_home_safe_mode_enable"
        android:layout="@layout/preference_header"
        android:summary="com.miui.home"
        android:title="@string/mihome" />

    <SwitchPreference
        android:icon="@drawable/ic_default"
        android:key="prefs_key_system_settings_safe_mode_enable"
        android:layout="@layout/preference_header"
        android:summary="com.android.settings"
        android:title="@string/system_settings" />

    <SwitchPreference
        android:icon="@drawable/ic_default"
        android:key="prefs_key_security_center_safe_mode_enable"
        android:layout="@layout/preference_header"
        android:summary="com.miui.securitycenter"
        android:title="@string/security_center_hyperos" />

    <SwitchPreference
        android:icon="@drawable/ic_default"
        android:key="prefs_key_demo_safe_mode_enable"
        android:layout="@layout/preference_header"
        android:summary="com.hchen.demo"
        android:title="@string/demo" />

    </PreferenceCategory>
    
</PreferenceScreen>